--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 ---------------------------------------*/
 @font-face {
     font-family: "beleren";
-    src: url("../css/beleren.woff");
+    src: url("https://github.com/eliodmsr/css-curriculum-exercise/raw/main/css/beleren.woff");
   }
 
   html {
